# nix-python-uv

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
nix/: formatting.nix  outputs.nix
scripts/: other.py
tests/: test_something.py
